# bybit_quant_agent

./: .coverage  .env.example  LICENSE  README.md  pyproject.toml
docs/architecture/: Architecture.md
docs/engineering/: EBS-001-Project-Foundation.md  EBS-002-Configuration.md  EBS-003-Logging.md  EBS-004-Domain-Model.md  EBS-004A-Architecture.md  EBS-006-Exceptions.md  EBS-007-HTTP-Transport.md
quant-platform/: .coverage  .gitignore  README.md
quant-platform/config/: config.yaml
quant-platform/src/quant_platform/: logging.py
quant-platform/tests/: test_config.py  test_logging.py
src/quant_platform/: __init__.py  config.py  main.py
src/quant_platform/domain/: __init__.py  constants.py  enums.py  symbols.py  timeframes.py  types.py
src/quant_platform/exceptions/: __init__.py  exceptions.py
src/quant_platform/exchange/: __init__.py
src/quant_platform/http/: __init__.py  client.py  models.py
src/quant_platform/market_data/: __init__.py
src/quant_platform/storage/: __init__.py
tests/: test_domain.py  test_main.py
tests/config/: test_config.py
tests/domain/: test_domain.py
tests/exceptions/: __init__.py  test_exceptions.py
tests/http/: __init__.py  test_http.py
